--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "alias": {
-      "react": "preact/compat",
-      "react-dom/test-utils": "preact/test-utils",
-      "react-dom": "preact/compat",
-      "react/jsx-runtime": "preact/jsx-runtime"
+    "react": "preact/compat",
+    "react-dom/test-utils": "preact/test-utils",
+    "react-dom": "preact/compat",
+    "react/jsx-runtime": "preact/jsx-runtime"
   },
   "scripts": {
     "watch": "parcel ./src/index.html"
@@ -23,9 +23,11 @@
   },
   "homepage": "https://github.com/tanjim-rahat/HaveTodo#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
     "parcel": "^2.7.0",
     "preact": "^10.11.2",
     "tailwindcss": "^3.2.1"
+  },
+  "dependencies": {
+    "react-clock": "^3.1.0"
   }
 }
